# ojax-nn

./: .gitignore  clear_cache.sh  pyproject.toml  readme.md  run_black.sh  run_coverage.sh  run_mypy.sh  setup.py
examples/cifar10-cnn/: data_utils.py  densenet.py  jax_env_configs.py  readme.md  run.py  vgg.py
examples/imdb/: data_utils.py  indrnn.py  models.py  readme.md  run.py
examples/log-monitor/: readme.md  run.py
examples/mnist-mlp/: data_utils.py  optim_utils.py  readme.md  run_custom.py  run_optax.py
examples/vi-bdl/: calibration.py  models.py  readme.md  resnet.py  run.py  vi_optim.py
ojnn/: __init__.py  ftypes.py  struct.py  utils.py
ojnn/io/: __init__.py  base.py  dataset.py  from_datasets.py  logging.py  monitor.py  utils.py
ojnn/modules/: __init__.py  activation.py  attention.py  container.py  embedding.py  init.py  linear.py  misc.py  module.py  pooling.py  recurrent.py  regularization.py  utils.py
ojnn/optim/: __init__.py  from_optax.py  optimizer.py  scheduler.py
tests/: test_ftypes.py  test_modules_activation.py  test_modules_init.py  test_modules_module.py  test_struct.py
